# docudactyl

./: .editorconfig  .gitignore  .tool-versions  0-AI-MANIFEST.a2ml  ABI-FFI-README.md  AI.a2ml  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.adoc  CONTRIBUTING.md  ECOSYSTEM.scm  EXPLAINME.adoc  Justfile  PLAYBOOK.scm  QUICKSTART-DEV.adoc  QUICKSTART-MAINTAINER.adoc  QUICKSTART-USER.adoc  README.adoc  README.md  ROADMAP.adoc  SECURITY.md  STATE.scm  TEST-NEEDS.md  TOPOLOGY.md  codemeta.json  docudactyl.ipkg  flake.nix  guix.scm  llm-warmup-dev.md  llm-warmup-user.md  setup.sh  stapeln.toml
.github/workflows/: codeql.yml  dogfood-gate.yml  guix-nix-policy.yml  hpc-ci.yml  hypatia-scan.yml  instant-sync.yml  jekyll-gh-pages.yml  jekyll.yml  mirror.yml  quality.yml  rsr-antipattern.yml  scorecard-enforcer.yml  scorecard.yml  secret-scanner.yml  security-policy.yml  wellknown-enforcement.yml  workflow-linter.yml
.machine_readable/: ADJUST.contractile  AGENTIC.scm  CLADE.a2ml  ECOSYSTEM.scm  INTENT.contractile  META.a2ml  META.scm  MUST.contractile  NEUROSYM.scm  PLAYBOOK.scm  STATE.scm  TRUST.contractile
.machine_readable/6a2/: AGENTIC.a2ml  ECOSYSTEM.a2ml  META.a2ml  STATE.a2ml
.machine_readable/anchors/: ANCHOR.a2ml
.well-known/: ai.txt  humans.txt  security.txt
audits/: assail-classifications.a2ml  audit-ffi-2026-05-26.md
contractiles/intend/: Intentfile.a2ml
contractiles/trust/: Trustfile.a2ml
deploy/: Containerfile  slurm-docudactyl.sh
docs/: CITATIONS.adoc  EPSTEIN-EXTRACTION-TESTS.md  INTEGRATION-PLAN-DOCUDACTYL.md  INVESTIGATOR-TOOLKIT.md  tech-debt-2026-05-26.md
docs/decisions/: 2026-05-30-docudactyl-chapel-rehab.md
ffi/zig/: build.zig
ffi/zig/include/: docudactyl_ffi.h
ffi/zig/src/: cache.zig  capnp.zig  conduit.zig  docudactyl_ffi.zig  dragonfly.zig  entity_graph.zig  evasion_detect.zig  financial_extract.zig  flight_log.zig  gpu_ocr.zig  hw_crypto.zig  investigator_summary.zig  (+10 more)
schema/: stages.capnp
src/abi/: Foreign.idr  Layout.idr  Types.idr
src/ada/: docudactyl.gpr  docudactyl_tui.adb  document_model.adb  document_model.ads  terminal_utils.adb  terminal_utils.ads
src/chapel/: Checkpoint.chpl  Config.chpl  ContentType.chpl  DocudactylHPC.chpl  FFIBridge.chpl  FaultHandler.chpl  ManifestLoader.chpl  NdjsonManifest.chpl  ProgressReporter.chpl  ResultAggregator.chpl  ShardedOutput.chpl  smoke.chpl
src/julia/: Docudactyl.jl  Project.toml  analysis.jl  cli.jl  export.jl  extract.jl  parallel.jl  types.jl
src/ocaml/: docudactyl_scm.ml  document_types.ml  dune  dune-project  pdf_parser.ml  scheme_emit.ml
(+4 files in other folders)
