; SPDX-FileCopyrightText: 2026 Jonathan D.A. Jewell (hyperpolymath) <jonathan.jewell@open.ac.uk>
; SPDX-License-Identifier: PMPL-1.0-or-later

(executable
 (name docudactyl_scm)
 (public_name docudactyl-scm)
 (libraries camlpdf yojson cmdliner)
 (modules docudactyl_scm pdf_parser scheme_emit document_types))
