; SPDX-FileCopyrightText: 2025 Hyperpolymath
; SPDX-License-Identifier: PMPL-1.0-or-later

(lang dune 3.0)

(name docudactyl_scm)

(generate_opam_files true)

(source
 (github hyperpolymath/docudactyl))

(authors "Hyperpolymath <hyperpolymath@proton.me>")

(maintainers "Hyperpolymath <hyperpolymath@proton.me>")

(license "PMPL-1.0-or-later")

(documentation https://github.com/hyperpolymath/docudactyl)

(package
 (name docudactyl_scm)
 (synopsis "PDF to Scheme transformer for Docudactyl")
 (description "Transforms PDF documents into machine-readable Scheme (S-expression) format")
 (depends
  (ocaml (>= 4.14))
  dune
  camlpdf
  yojson
  cmdliner))
