; SPDX-FileCopyrightText: 2026 Jonathan D.A. Jewell (hyperpolymath) <jonathan.jewell@open.ac.uk>
; SPDX-License-Identifier: PMPL-1.0-or-later

(lang dune 3.0)

(name docudactyl_scm)

(generate_opam_files true)

(source
 (github hyperpolymath/docudactyl))

(authors "Jonathan D.A. Jewell <jonathan.jewell@open.ac.uk>")

(maintainers "Jonathan D.A. Jewell <jonathan.jewell@open.ac.uk>")

(license "PMPL-1.0-or-later")

(documentation https://github.com/hyperpolymath/docudactyl)

(package
 (name docudactyl_scm)
 (synopsis "PDF to Scheme transformer for Docudactyl")
 (description "Transforms PDF documents into machine-readable Scheme (S-expression) format")
 (depends
  (ocaml (>= 4.14))
  dune
  camlpdf
  yojson
  cmdliner))
