; SPDX-FileCopyrightText: 2026 Jonathan D.A. Jewell (hyperpolymath) <j.d.a.jewell@open.ac.uk>
; SPDX-License-Identifier: MPL-2.0

(lang dune 3.0)

(name docudactyl_scm)

(generate_opam_files true)

(source
 (github hyperpolymath/docudactyl))

(authors "Jonathan D.A. Jewell <j.d.a.jewell@open.ac.uk>")

(maintainers "Jonathan D.A. Jewell <j.d.a.jewell@open.ac.uk>")

(license "MPL-2.0")

(documentation https://github.com/hyperpolymath/docudactyl)

(package
 (name docudactyl_scm)
 (synopsis "PDF to Scheme transformer for Docudactyl")
 (description "Transforms PDF documents into machine-readable Scheme (S-expression) format")
 (depends
  (ocaml (>= 4.14))
  dune
  camlpdf
  yojson
  cmdliner))
